--- a/README
+++ b/README
@@ -1,18 +1,18 @@
-# Android Prework - *Name of App Here*
+# Android Prework - *Truc's Intro*
 
-Submitted by: **Your Name Here**
+Submitted by: **Truc Nguyen**
 
-**Name of your app** is an android app that shows an image and introductory message, and allows pressing a button to display a Toast. 
+**Truc's Intro** is an android app that shows an image and introductory message, and allows pressing a button to display a Toast. 
 
-Time spent: **X** hours spent in total
+Time spent: **1** hours spent in total
 
 ## Required Features
 
 The following **required** functionality is completed:
 
-* [ ] Image and introductory message displayed on screen
-* [ ] Button displayed on screen
-* [ ] Toast with message appears when button is pressed 
+* [ yes ] Image and introductory message displayed on screen
+* [ yes ] Button displayed on screen
+* [ yes ] Toast with message appears when button is pressed 
 
 The following **optional** features are implemented:
 
